# asklepios-backend/app/Models/Pharmacy/PharmacyBranch.php
@@ -28,7 +28,11 @@ class PharmacyBranch extends Model
         return $this->hasMany(Inventory::class);
     }
     public function country()
-{
-    return $this->belongsTo(\App\Models\Country::class);
-}
+    {
+        return $this->belongsTo(\App\Models\Country::class);
+    }
+    public function branchArticles()
+    {
+        return $this->hasMany(PharmacyBranchArticle::class, 'pharmacy_branch_id');
+    }
 }
